tests/od2trips/errors/format/vm/vm_line_missing/errors.od2trips
Error: Missing line for district D8.
Quitting (on error).
